--- a/src/1_Config_Servidor_DHCP/dhcpd.conf
+++ b/src/1_Config_Servidor_DHCP/dhcpd.conf
@@ -1,7 +1,9 @@
-subnet 172.17.0.0 netmask 255.255.0.0 {
-  range 172.17.0.10 172.17.0.100; # Faixa de IPs disponíveis para atribuição
-  option routers 172.17.0.1;      # Endereço do gateway
-  option broadcast-address 172.17.255.255;
-  default-lease-time 600;         # Tempo de concessão padrão em segundos
-  max-lease-time 7200;            # Tempo máximo de concessão em segundos
+subnet 192.168.1.0 netmask 255.255.255.0 {
+  range 192.168.1.100 192.168.1.200;  # Faixa de IPs disponíveis para atribuição
+  option routers 192.168.1.1;         # Endereço do gateway
+  option subnet-mask 255.255.255.0;   # Máscara de sub-rede
+  option broadcast-address 192.168.1.255;
+  default-lease-time 600;             # Tempo de concessão padrão em segundos
+  max-lease-time 7200;                # Tempo máximo de concessão em segundos
+  interface "Wi-Fi";                  # Nome da interface de rede correta
 }
