--- a/src/1_Config_Servidor_DHCP/Dockerfile
+++ b/src/1_Config_Servidor_DHCP/Dockerfile
@@ -1,23 +1,14 @@
-#define a imagem base a ser usada
+# Usando a imagem base Ubuntu
 FROM ubuntu:latest
 
-#cria o diretório para armazenar os dados do servidor DHCP
-RUN mkdir -p /var/lib/dhcp/
+# Atualiza o repositório e instalando o servidor DHCP
+RUN apt-get update && apt-get install -y isc-dhcp-server
 
-#Cria um arquivo vazio de arrendamentos DHCP
-RUN touch /var/lib/dhcp/dhcpd.leases
-
-#Atualiza os repositórios de pacotes e instala o servidor DHCP
-RUN apt update && apt install -y isc-dhcp-server
-
-#copia o arquivo de configuração do servidor DHCP para dentro do contêiner
+#Copia o arquivo de configuração do DHCP para dentro do container
 COPY dhcpd.conf /etc/dhcp/dhcpd.conf
 
-#expondo a porta UDP 67 para aceitar conexões DHCP
+# Expondo a porta usada pelo servidor DHCP
 EXPOSE 67/udp
 
-#define o ponto de entrada padrão para o contêiner
-ENTRYPOINT ["dhcpd", "-f", "-d", "--no-pid"]
-
-#Define o comando padrão a ser executado quando o contêiner é iniciado
-CMD ["tail","-f","/dev/null"]
+#Comando para iniciar o servidor DHCP
+CMD ["dhcpd", "-4", "-f", "-d", "--no-pid", "-cf", "/etc/dhcp/dhcpd.conf", "eth0"]
