--- a/src/3_Config_Firewall/Dockerfile
+++ b/src/3_Config_Firewall/Dockerfile
@@ -1,14 +1,14 @@
-#define a imagem base a ser usada
+#imagem base Ubuntu
 FROM ubuntu:latest
 
-#atualiza os repositórios de pacotes e instala o iptables
+#Atualiza o repositório e instalando o firewall iptables
 RUN apt-get update && apt-get install -y iptables
 
-#Copia o script firewall.sh para dentro do contêiner
+#copia o script de configuração do firewall para dentro do container
 COPY firewall.sh /root/firewall.sh
 
-#concede permissões de execução ao script
-RUN chmod 777 /root/firewall.sh
+#script de configuração do firewall como executável
+RUN chmod +x /root/firewall.sh
 
-#define o comando padrão a ser executado quando o contêiner é iniciado
-CMD ["/root/firewall.sh"]
+#comando para executar o script de configuração do firewall
+CMD ["/bin/bash", "/root/firewall.sh"]
