--- a/src/2_Config_Servidor_DNS/Dockerfile
+++ b/src/2_Config_Servidor_DNS/Dockerfile
@@ -1,20 +1,18 @@
-#define a imagem base a ser usada
+# Usando a imagem base Ubuntu
 FROM ubuntu:latest
 
-#Atualiza os repositórios de pacotes e instala o servidor DNS Bind9
+#atualiza o repositório e instalando o servidor DNS BIND9
 RUN apt-get update && apt-get install -y bind9
 
-#copia o arquivo de configuração named.conf.options para dentro do contêiner
+#Copiao arquivo de configuração do DNS para dentro do container
 COPY named.conf.options /etc/bind/named.conf.options
 
-#expondo a porta UDP 53 para aceitar consultas DNS
+#Expondo a porta usada pelo servidor DNS
+EXPOSE 53/tcp
 EXPOSE 53/udp
 
-#expondo a porta TCP 53 para aceitar consultas DNS
-EXPOSE 53/tcp
+#Definindo o diretório de trabalho
+WORKDIR /etc/bind
 
-#Define o ponto de entrada padrão para o contêiner
-ENTRYPOINT ["/usr/sbin/named", "-g", "-c", "/etc/bind/named.conf", "-u", "bind"]
-
-#define o comando padrão a ser executado quando o contêiner é iniciado
-CMD ["tail","-f","/dev/null"]
+# Comando para iniciar o servidor DNS
+CMD ["/usr/sbin/named", "-g", "-c", "named.conf", "-u", "bind"]
